HEAD
	+ Bug fix: some problems with the AD synchronization solved
	+ Bug fix: userscorner title icon
1.5
	+ Bug fix: don't try to contact slaves from within a slave when groups
	  are updated
	+ Use built-in EBox::ThirdParty::Apache2::AuthCookie
1.4.2
	+ Bug fix: fix wrong migration number
1.4.1
	+ Bug fix: surround LDAP migration with a try/catch to make sure the rest
	  it is run
	+ Bug fix: do not allow \w with localized characters as LDAP schema does not
	  allow them for home directory attribute. (Closes #1713)
1.4
	+ Allow the master to pass extra parameters in SOAP calls to slaves
1.3.17
	+ Bug fix: Set style for login page in user corner
1.3.16
	+ Bug fix: keep menu open on LDAP Info
1.3.15
	+ Add support for ldaps
	+ Add support for slaves running Apache in ports different than 443
	+ Allow to remove slaves from slave list
	+ Added ebox-usersandgroups-reinstall to easily reset the LDAP mode
	+ Bug fix: issue with user deletion in French (Closes #1651)
	+ Bug fix: anonymous connection for getting DN is retried several
	times, this fixes a bug when restoring configuration backup
1.3.14
	+ Synchronize all the users from the AD and not only from CN=Users
	+ Add operation name and username on updateGroup
	+ Add slave notification for group modify and delete
	+ Change button order to "Add" and "Add and Edit" in Add User
	  template. If users press return in the form it adds a new user
	  and stays on the same page.
1.3.13
	+ Usability enhancements: (Closes #1649)
		* Create a unique Users And Group Folder
		* Unify Add User/Edit User in a single page
		* Unify Add Group/Edit Group in a single page
		* Two buttons: "Add and Edit" and "Add"
		* Add breadcrumbs
	+ Add UserTemplate composite to configure default options that are used when
	a new user is created
	+ Add defaultUserModel to LdapUserBase.pm
	+ Specify folder for SlaveInfo
	+ Add menu entry with information about LDAP including password